--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "GOOGLE_CLOUD_PROJECT=roidtc-april-attendee104 node server.js",
     "test": "nyc mocha --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^3.7.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
